<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg4"
    style="@style/SpecialText" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/path" />

    <EditText
        android:id="@+id/path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filename" />

    <EditText
        android:id="@+id/downloadFileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/downloadBt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download" />

        <Button
            android:id="@+id/downloadopen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/open" />
        <Button
            android:id="@+id/downloadfh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/back" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/downloadbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="20px" />

    <TextView
        android:id="@+id/downloadmsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

</LinearLayout>