<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/logina"
    android:orientation="vertical" >

    <!--
       padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部
    -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dip"
        android:background="#00000000"
        android:padding="25dip" >

        <!-- 账号  -->
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:textColor="#000"
            android:singleLine="true"
            android:drawableLeft="@drawable/bg_name" />
        
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_edit"
            android:inputType="textPassword"
            android:password="true"
            android:textColor="#000"
            android:singleLine="true"
            android:drawableLeft="@drawable/bg_pass" />
        <!-- 登录button -->
		<Button
            android:id="@+id/vpntoggle_button"
            android:layout_width="100dip"
            android:layout_height="50dip"
            android:layout_alignLeft="@id/password_edit"
            android:layout_below="@id/password_edit"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_selector"
            android:divider="@drawable/divider_horizontal_timeline"
            android:dividerHeight="2.0dip"
            android:text="@string/connect"
              />
        <Button
            android:id="@+id/signin_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             
            android:layout_below="@id/password_edit"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_selector"
            android:divider="@drawable/divider_horizontal_timeline"
            android:dividerHeight="2.0dip"
           	android:text="登   录"
           	android:textSize="30dip"
           	android:textColor="#ffffff"
              />
       
       <CheckBox 
		    android:id="@+id/recorduserinfo" 
		    style="@style/normalText"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/recorduserinfo" 
		    android:layout_below="@+id/signin_button"
		    />
     
    </RelativeLayout>
 

</LinearLayout>